# solvx-quickpod

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  future_updates.md  install_shortcut.py  promakeover.md  pyproject.toml  requirements.txt
.github/workflows/: build-test.yml  build.yml  launcher-guard.yml
assets/: PLACEHOLDERS.md
demo/: RELEASE_CHECKLIST.md  create_icons.py  create_proper_ico.py  demo_script.py  generate_master_icon.py
my_ai_package/: ai.py  config.py  controller.py  judge.py  launcher.py  launcher.py.gold  main.py  memory_context.py  memory_ingest.py  memory_logging.py  memory_services.py  memory_user.py  memory_worker.py  orchestrator.py  server.py
my_ai_package/tools/: __init__.py  registry.py  websearch.py
packaging/linux/: build.sh
packaging/windows/: build.ps1
server-files/: start_vllm.sh  start_vllm_qwen32b.sh
solvx_quickpod/: __init__.py  ai.py  config.py  launcher.py  main.py  onboarding.py  storage.py
