[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solvx-quickpod"
version = "1.0.0"
description = "One-click AI chat on RunPod cloud GPUs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SolvX"}
]
keywords = ["runpod", "llm", "vllm", "mistral", "gpu", "cloud", "ai", "chat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/tradewithmeai/runpod-app"
Repository = "https://github.com/tradewithmeai/runpod-app"
Issues = "https://github.com/tradewithmeai/runpod-app/issues"

[project.scripts]
solvx-quickpod = "solvx_quickpod.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["solvx_quickpod*"]
